fix: minor bug fixes incl. project-role revert left-align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,10 @@ footer {
     background-color: lightgrey;
 }
 
+h1.project-h1 {
+    margin-top: 1em;
+}
+
 h4.project-question {
     margin-top: 0.8em;
 }
@@ -291,7 +295,7 @@ mark {
 
     h1 {
         font-size: 2.4em;
-        font-weight: lighter;
+        margin-top: 1.2em;
     }
     
     .hero {
@@ -306,6 +310,10 @@ mark {
 
     /*** Projects @media 600px Specific Styling ***/
 
+    p.project-role {
+        font-size: 1em;
+    }
+
     p.section-label {
         font-size: 1.2em;
     }
@@ -315,7 +323,11 @@ mark {
         margin: 1.5em auto;
     }
 
-    h2, p, ol {
+    h2, ol {
+        text-align: left;
+    }
+
+    p:not(.project-role) {
         text-align: left;
     }
 
@@ -327,6 +339,7 @@ mark {
         display: inline-block;
     }
 }
+
 
 @media screen and (min-width: 800px) {
 
@@ -387,6 +400,7 @@ mark {
         display: inline-block;
     }
 }
+
 
 @media screen and (min-width: 1100px) {
 
